--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 #Circle{
   width: 1000px;
   height: 1000px;
-  background-color: #61dafb;
+  background-color: #5dde9e;
   border-radius: 50%;
 
 
@@ -26,7 +26,7 @@
 #insta-Circle, #yt-Circle, #tik-Circle, #merch-Circle, #spotify-Circle{
   width: 150px;
   height: 150px;
-  background-color: #61dafb;
+  background-color: #5dde9e;
   border-radius: 50%;
   align-items: center;
   justify-content: space-between;
